--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 #----------GRAGANA DASHBOARD-------------------------------------------------
   grafana:
     image: grafana/grafana
-    container_name: Grafana
+    container_name: grafana
     depends_on:
       - prometheus
       - influxdb
@@ -87,7 +87,7 @@ services:
 # Cadvisor
   cadvisor:
     image: google/cadvisor
-    container_name: Cadvisor
+    container_name: cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
