--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -80,7 +80,7 @@ scrape_configs:
     static_configs:
       - targets: ['10.121.2.217:9182']
     
-  - job_name: ‘nginx exporter’
+  - job_name: 'nginx exporter'
 
     scrape_interval: 5s
     
